--- a/style.css
+++ b/style.css
@@ -1,30 +1,24 @@
 body { background-color: #fff; }
+
 table {
-  background-color: #ddd;
-  border-collapse: collapse;
+  background-color: #fff;
 }
-td { width: 100px; height: 100px; }
-.x, .o { background-color: #fff; }
+
+td {
+  width: 100px;
+  height: 100px;
+  border: 1px solid #eee;
+  background-color: #ffe;
+}
+
+.x { background-color: #eff; }
+.o { background-color: #fef; }
+
 p  {
   font-family: fantasy;
   text-align: center;
   max-height: 100px;
   font-size: 100px;
   overflow: hidden;
-  margin: 0px 0px;
-}
-
-#test {
-  background-color: blue;
-  height: 100px;
-  width: 100px;
-  overflow: hidden;
-}
-
-#test span {
-  display: block;
-  font-size: 250px;
-  font-family: fantasy;
-  margin-left: -10px;
-  margin-top: -130px;
+  margin: -40px 0px 0px;
 }
