--- a/style.css
+++ b/style.css
@@ -8,8 +8,9 @@ td, #next {
   width: 100px;
   height: 100px;
   border: 1px solid #eee;
-  background-color: #ffe;
 }
+
+td { background-color: #ffe; }
 
 .x { background-color: #eff; }
 .o { background-color: #fef; }
@@ -19,14 +20,12 @@ p  {
   text-align: center;
   max-height: 100px;
   font-size: 100px;
-  overflow: hidden;
   margin: -40px 0px 0px;
 }
 
 #next {
   position: absolute;
-  top: 5px;
-  right: 5px;
-  margin: 2px 0px;
-  padding: 1px;
+  display: block;
+  top: 0px;
+  right: 0px;
 }
