--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ p  {
   text-align: center;
   max-height: 100px;
   font-size: 100px;
-  margin: -40px 0px 0px;
+  margin: -40px 0px 0px 0px;
 }
 
 #next {
@@ -29,3 +29,4 @@ p  {
   top: 0px;
   right: 0px;
 }
+#next p { margin: -20px 0px 0px 0px;}
